Fixed letter spacing, width, moved files

--- a/src/components/Process/Process.module.scss
+++ b/src/components/Process/Process.module.scss
@@ -14,7 +14,7 @@
 @media only screen and (min-width: 550px) and (max-width: 949px) {
   ._process h1,
   ._process h2 {
-    max-width: 774px;
+    max-width: 650px;
   }
 }
 
@@ -31,7 +31,7 @@
   }
 
   ._process h2 {
-    max-width: 1100px;
+    max-width: 1000px;
   }
 }
 
